changed-mind, no longer wrap with tt-tag for 'word'

--- a/slideshow/main.css
+++ b/slideshow/main.css
@@ -3,7 +3,7 @@ html {
   height: 100%;
 }
 body {
-  font-family: Helvetica;
+  font-family: 'Helvetica', sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
   height: 3000px;
